<resources>
    <string name="app_name">PME Playground</string>
    <string name="label_button_go_to_second_activity">Go to Second Activity</string>
    <string name="text_hello_from_second_activity">Hello from Second Activity</string>
    <string name="image_descr_robot_head">Robot Head</string>
    <string name="image_descr_startup_icon">Startup Icon</string>
    <string name="text_main_counter_value">Counter Value: %1$d</string>
    <string name="label_button_inc">+</string>
    <string name="label_button_dec">-</string>
    <string name="text_todo">ToDo</string>
    <string name="text_description">Description</string>
    <string name="text_btn_save">Save</string>
    <string name="title_todo_form">Input</string>
    <string name="title_todo_list">Todos</string>
    <string name="title_settings">Settings</string>
    <string name="title_detail_view">Detail View</string>
    <string name="text_category">Category</string>
    <string name="text_deadline">Deadline</string>
    <string name="select_deadline">Select Deadline</string>
    <string name="new_todo">+</string>


</resources>