<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@+id/navigation_todo_list">

    <fragment
        android:id="@+id/navigation_todo_list"
        android:name="de.fhe.pmeplayground.view.toDolist.ToDoListFragment"
        android:label="@string/title_todo_list"
        tools:layout="@layout/fragment_todo_list" />

    <fragment
        android:id="@+id/navigation_input"
        android:name="de.fhe.pmeplayground.view.input.InputFragment"
        android:label="@string/title_todo_form"
        tools:layout="@layout/fragment_input" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.fhe.pmeplayground.view.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_detail_view"
        android:name="de.fhe.pmeplayground.view.detailview.DetailView"
        android:label="@string/title_detail_view"
        tools:layout="@layout/fragment_detail_view" />

</navigation>