<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SecondActivity">

    <TextView
        android:id="@+id/activity_second_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hello_from_second_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_second_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_descr_robot_head"
        app:layout_constraintBottom_toTopOf="@+id/activity_second_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_robot_head"
        app:tint="@color/teal_700" />

    <Button
        android:id="@+id/activity_second_button_inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_inc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_second_button_dec"
        app:layout_constraintTop_toBottomOf="@+id/activity_second_textview" />

    <Button
        android:id="@+id/activity_second_button_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_dec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_second_button_inc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_second_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>